--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       width: 3.2%;
       height: 4.5%;
       background-color: transparent;
-      border: 1px dashed red;
       font-size: 16px;
       pointer-events: auto;
       cursor: pointer;
@@ -22,54 +21,51 @@
   <div class="container">
     <img class="chart" src="images/phoneme_chart.webp" />
 
-    <!-- 子音區 24-->
-    <button class="button" style="top: 65.8%; left: 13.9%;" onclick="playSound('p')">p</button>
-    <button class="button" style="top: 65.8%; left: 3.9%;" onclick="playSound('b')">b</button>
-    <button class="button" style="top: 76.4%; left: 3.9%;" onclick="playSound('d')">d</button>
-    <button class="button" style="top: 76.4%; left: 13.9%;" onclick="playSound('t')">t</button>
-    <button class="button" style="top: 87%; left: 3.9%;" onclick="playSound('g')">g</button>
-    <button class="button" style="top: 87%; left: 13.9%;" onclick="playSound('k')">k</button>
-    <button class="button" style="top: 65.8%; left: 25%;" onclick="playSound('f')">f</button>
-    <button class="button" style="top: 65.8%; left: 35.2%;" onclick="playSound('v')">v</button>
-    <button class="button" style="top: 76.4%; left: 25%;" onclick="playSound('theta')">θ</button>
-    <button class="button" style="top: 76.4%; left: 35.2%;" onclick="playSound('edh')">ð</button>
-    <button class="button" style="top: 87%; left: 25%;" onclick="playSound('s')">s</button>
-    <button class="button" style="top: 87%; left: 35.2%;" onclick="playSound('z')">z</button>
-    <button class="button" style="top: 65.8%; left: 45%;" onclick="playSound('dzh')">dʒ</button>
-    <button class="button" style="top: 76.4%; left: 45%;" onclick="playSound('tch')">tʃ</button>
-    <button class="button" style="top: 87%; left: 45%;" onclick="playSound('esh')">ʃ</button>
-    <button class="button" style="top: 65.8%; left: 55%;" onclick="playSound('ezh')">ʒ</button>
-    <button class="button" style="top: 76.4%; left: 55%;" onclick="playSound('h')">h</button>
-    <button class="button" style="top: 65.8%; left: 66.2%;" onclick="playSound('m')">m</button>
-    <button class="button" style="top: 76.4%; left: 66.2%;" onclick="playSound('n')">n</button>
-    <button class="button" style="top: 87%; left: 66.2%;" onclick="playSound('eng')">ŋ</button>
-    <button class="button" style="top: 65.8%; left: 79.7%;" onclick="playSound('l')">l</button>
-    <button class="button" style="top: 76.4%; left: 79.7%;" onclick="playSound('r')">r</button>
-    <button class="button" style="top: 87%; left: 79.7%;" onclick="playSound('j')">j</button>
-    <button class="button" style="top: 65.8%; left: 89.8%;" onclick="playSound('w')">w</button>
-    
+    <button class="button" style="top: 65.8%; left: 13.9%;" onclick="playSound('p')"></button>
+    <button class="button" style="top: 65.8%; left: 3.9%;" onclick="playSound('b')"></button>
+    <button class="button" style="top: 76.4%; left: 3.9%;" onclick="playSound('d')"></button>
+    <button class="button" style="top: 76.4%; left: 13.9%;" onclick="playSound('t')"></button>
+    <button class="button" style="top: 87%; left: 3.9%;" onclick="playSound('g')"></button>
+    <button class="button" style="top: 87%; left: 13.9%;" onclick="playSound('k')"></button>
+    <button class="button" style="top: 65.8%; left: 25%;" onclick="playSound('f')"></button>
+    <button class="button" style="top: 65.8%; left: 35.2%;" onclick="playSound('v')"></button>
+    <button class="button" style="top: 76.4%; left: 25%;" onclick="playSound('theta')"></button>
+    <button class="button" style="top: 76.4%; left: 35.2%;" onclick="playSound('edh')"></button>
+    <button class="button" style="top: 87%; left: 25%;" onclick="playSound('s')"></button>
+    <button class="button" style="top: 87%; left: 35.2%;" onclick="playSound('z')"></button>
+    <button class="button" style="top: 65.8%; left: 45%;" onclick="playSound('dzh')"></button>
+    <button class="button" style="top: 76.4%; left: 45%;" onclick="playSound('tch')"></button>
+    <button class="button" style="top: 87%; left: 45%;" onclick="playSound('esh')"></button>
+    <button class="button" style="top: 65.8%; left: 55%;" onclick="playSound('ezh')"></button>
+    <button class="button" style="top: 76.4%; left: 55%;" onclick="playSound('h')"></button>
+    <button class="button" style="top: 65.8%; left: 66.2%;" onclick="playSound('m')"></button>
+    <button class="button" style="top: 76.4%; left: 66.2%;" onclick="playSound('n')"></button>
+    <button class="button" style="top: 87%; left: 66.2%;" onclick="playSound('eng')"></button>
+    <button class="button" style="top: 65.8%; left: 79.7%;" onclick="playSound('l')"></button>
+    <button class="button" style="top: 76.4%; left: 79.7%;" onclick="playSound('r')"></button>
+    <button class="button" style="top: 87%; left: 79.7%;" onclick="playSound('j')"></button>
+    <button class="button" style="top: 65.8%; left: 89.8%;" onclick="playSound('w')"></button>
+    <button class="button" style="top: 4.8%; left: 5%;" onclick="playSound('epsilon')"></button>
+    <button class="button" style="top: 11.6%; left: 5%;" onclick="playSound('e')"></button>
+    <button class="button" style="top: 18.3%; left: 5%;" onclick="playSound('ae')"></button>
+    <button class="button" style="top: 25.1%; left: 5%;" onclick="playSound('aw')"></button>
+    <button class="button" style="top: 31.9%; left: 5%;" onclick="playSound('ih')"></button>
+    <button class="button" style="top: 38.7%; left: 5%;" onclick="playSound('uh')"></button>
+    <button class="button" style="top: 45.5%; left: 5%;" onclick="playSound('o')"></button>
+    <button class="button" style="top: 52.3%; left: 5%;" onclick="playSound('open_o')"></button>
+    <button class="button" style="top: 4.8%; left: 25.8%;" onclick="playSound('caret')"></button>
+    <button class="button" style="top: 11.6%; left: 25.8%;" onclick="playSound('schwa')"></button>
+    <button class="button" style="top: 18.3%; left: 25.8%;" onclick="playSound('i')"></button>
+    <button class="button" style="top: 25.1%; left: 25.8%;" onclick="playSound('ai')"></button>
+    <button class="button" style="top: 31.9%; left: 25.8%;" onclick="playSound('ju')"></button>
+    <button class="button" style="top: 38.7%; left: 25.8%;" onclick="playSound('u')"></button>
+    <button class="button" style="top: 45.5%; left: 25.8%;" onclick="playSound('oi')"></button>
+    <button class="button" style="top: 4.8%; left: 48.6%;" onclick="playSound('rhotacized_schwa')"></button>
+    <button class="button" style="top: 11.6%; left: 48.6%;" onclick="playSound('ir')"></button>
+    <button class="button" style="top: 18.3%; left: 48.6%;" onclick="playSound('epsilon_r')"></button>
+    <button class="button" style="top: 25.1%; left: 48.6%;" onclick="playSound('open_o_r')"></button>
+    <button class="button" style="top: 31.9%; left: 48.6%;" onclick="playSound('ar')"></button>
 
-    <!-- 母音區 20-->
-    <button class="button" style="top: 4.8%; left: 5%;" onclick="playSound('epsilon')">ɛ</button>
-    <button class="button" style="top: 11.6%; left: 5%;" onclick="playSound('e')">e</button>
-    <button class="button" style="top: 18.3%; left: 5%;" onclick="playSound('ae')">æ</button>
-    <button class="button" style="top: 25.1%; left: 5%;" onclick="playSound('aw')">aʊ</button>
-    <button class="button" style="top: 31.9%; left: 5%;" onclick="playSound('ih')">ɪ</button>
-    <button class="button" style="top: 38.7%; left: 5%;" onclick="playSound('uh')">ʊ</button>
-    <button class="button" style="top: 45.5%; left: 5%;" onclick="playSound('o')">o</button>
-    <button class="button" style="top: 52.3%; left: 5%;" onclick="playSound('open_o')">ɔ</button>
-    <button class="button" style="top: 4.8%; left: 25.8%;" onclick="playSound('caret')">ʌ</button>
-    <button class="button" style="top: 11.6%; left: 25.8%;" onclick="playSound('schwa')">ə</button>
-    <button class="button" style="top: 18.3%; left: 25.8%;" onclick="playSound('i')">i</button>
-    <button class="button" style="top: 25.1%; left: 25.8%;" onclick="playSound('ai')">aɪ</button>
-    <button class="button" style="top: 31.9%; left: 25.8%;" onclick="playSound('ju')">ju</button>
-    <button class="button" style="top: 38.7%; left: 25.8%;" onclick="playSound('u')">u</button>
-    <button class="button" style="top: 45.5%; left: 25.8%;" onclick="playSound('oi')">ɔɪ</button>
-    <button class="button" style="top: 4.8%; left: 48.6%;" onclick="playSound('rhotacized_schwa')">ɝ</button>
-    <button class="button" style="top: 11.6%; left: 48.6%;" onclick="playSound('ir')">ɪr</button>
-    <button class="button" style="top: 18.3%; left: 48.6%;" onclick="playSound('epsilon_r')">ɛr</button>
-    <button class="button" style="top: 25.1%; left: 48.6%;" onclick="playSound('open_o_r')">ɔr</button>
-    <button class="button" style="top: 31.9%; left: 48.6%;" onclick="playSound('ar')">ɑr</button>
 
 
 
