--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       width: 3.2%;
       height: 4.5%;
       background-color: transparent;
-      font-size: 16px;
+border: none;
+outline: none;
+box-shadow: none;      
+font-size: 16px;
       pointer-events: auto;
       cursor: pointer;
     }
